# wasm_rpn_calc

./: .gitignore  README.md  analysis.ipynb  bench.sh  bench_compilation.sh  bench_runtime.sh  bindings.rs  results_audit.csv  results_normal.csv  results_safe.csv  results_unsafe.csv  run.sh  setup.sh
command/: Cargo.toml  VulnerableCargo.toml
command/src/: bindings.rs  main.rs
command/supply-chain/: audits.toml  config.toml
command/supply-chain-unvettable/: audits.toml  config.toml
ficticious_vulnerability/wit-bindgen-rt/: RUSTSEC-2024-9999.md
rpn/: Cargo.toml  VulnerableCargo.toml
rpn/src/: bindings.rs  lib.rs
rpn/supply-chain/: audits.toml  config.toml
rpn/supply-chain-unvettable/: audits.toml  config.toml
wit/: README.md
wit/command/: world.wit
wit/rpn/: world.wit
