[package]
name = "command"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.38.0", features = ["bitflags"] }

[package.metadata.component]
package = "docs:rpn-cmd"

[package.metadata.component.target]
path = "../wit/command"

[package.metadata.component.target.dependencies]
"component:rpn" = { path = "../wit/rpn" }